--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 html lang="pt-BR">
 
+<!--Lucas Lima Gonçalves 21/08/2024-->
+
 <head>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
